# botkit

./: CLAUDE.md  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml  test.yml
core/: Cargo.toml
core/src/: action.rs  bot.rs  context.rs  error.rs  extractor.rs  handler.rs  lib.rs  responder.rs  response.rs
core/src/types/: component.rs  embed.rs  mod.rs
discord/: Cargo.toml
discord/src/: action.rs  bot.rs  client.rs  event.rs  lib.rs
discord/src/gateway/: intents.rs  mod.rs
discord/src/types/: interaction.rs  message.rs  mod.rs  user.rs
examples/: Cargo.toml  debug_polling.rs  test_matrix.rs  test_polling.rs  test_telegram.rs  typing_and_files.rs  unified.rs
matrix/: Cargo.toml
matrix/src/: action.rs  bot.rs  client.rs  config.rs  event.rs  lib.rs
src/: lib.rs
telegram/: Cargo.toml
telegram/src/: action.rs  bot.rs  client.rs  event.rs  lib.rs  types.rs
