[workspace]
resolver = "2"
members = ["core", "discord", "telegram", "matrix", "examples"]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/lexoliu/botkit"

[workspace.dependencies]
# Internal crates
botkit-core = { version = "0.1.0", path = "core" }
botkit-discord = { version = "0.1.0", path = "discord" }
botkit-telegram = { version = "0.1.0", path = "telegram" }
botkit-matrix = { version = "0.1.0", path = "matrix" }

# HTTP foundation
http-kit = "0.4.2"
skyzen = "0.1.0"
zenwave = "0.3.0"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"

# Error handling
thiserror = "2.0.17"

# Async runtime
futures-lite = "2"
executor-core = "0.7"
