[package]
name = "botkit-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description = "Core abstractions for the botkit unified bot framework"

[dependencies]
http-kit.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
futures-lite.workspace = true
executor-core.workspace = true
async-channel = "2"
async-fs = "2"
async-io = "2"
