[package]
name = "botkit-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description = "Core abstractions for the botkit unified bot framework"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
executor-core.workspace = true
async-channel = "2"
async-fs = "2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-io = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3", features = ["futures"] }
