[package]
name = "botkit-discord"
version = "0.1.0"
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description = "Discord implementation for botkit"

[dependencies]
botkit-core.workspace = true
http-kit.workspace = true
zenwave.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
futures-lite.workspace = true
executor-core.workspace = true
async-channel = "2"
async-fs = "2"
async-io = "2"
tracing = "0.1"
