[package]
name = "botkit-examples"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "unified"
path = "unified.rs"

[[bin]]
name = "test_telegram"
path = "test_telegram.rs"

[[bin]]
name = "test_polling"
path = "test_polling.rs"

[[bin]]
name = "typing_and_files"
path = "typing_and_files.rs"

[[bin]]
name = "debug_polling"
path = "debug_polling.rs"

[[bin]]
name = "test_matrix"
path = "test_matrix.rs"

[dependencies]
async-executor = "1"
async-fs = "2"
async-io = "2"
zenwave.workspace = true
botkit-core.workspace = true
botkit-discord = { path = "../discord" }
botkit-telegram = { path = "../telegram" }
botkit-matrix = { path = "../matrix" }
tracing-subscriber = "0.3"
skyzen.workspace = true
serde.workspace = true
serde_json.workspace = true
futures-lite.workspace = true
executor-core.workspace = true
http-kit.workspace = true
